Created Abstract MasterClasses to avoid reusing code